--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <input type="number" name="cxaNumero" id="numero">
           <input type="submit" value="Adicionar" onclick="adicionarElemento(document.querySelector('input#numero').value, document.querySelector('input#numero'))"> 
           <br>
-          <select class='lista-operacoes'></select>
+          <select class='lista-operacoes' size="5"></select>
 
           <br>
           <input type="submit" value="Finzalizar" class='mostrarResult' onclick="finalizar()">
